Wed Apr  7 13:46:12 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        
          Commented out an unused argument.

Wed Apr  7 12:12:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QosProfile/Component/QosProfile_Test_Component.idl:
        * connectors/dds4ccm/tests/QosProfile/Component/QosProfile_Test_Component_exec.h:
        * connectors/dds4ccm/tests/QosProfile/Connector/QosProfile_Test_Connector.idl:
          Moved templated connector to the namespace of the connector.

        * connectors/dds4ccm/tests/QosProfile/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/QosProfile/descriptors/USER_QOS_PROFILES.xml:
          Removed this file since we don't need it in this test.

        * connectors/dds4ccm/tests/SetConnectorAttributes/Connector/SetConnectorAttribute_Connector.idl:
          Moved templated connector to the namespace of the connector.

Wed Apr  7 11:09:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/On_Inconsistent_Topic/*:
          Rewritten this test in order to be more consistent.
          Also renamed files.

Wed Apr  7 07:14:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/PortUsage/*:
          Added test which tests the number of DataReaders and
          DataWriters used in DDS.

Wed Apr  7 07:06:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/avoids_ccm_lw.mpb:
        * MPC/config/ccm_lw.mpb:
          New base projects for future use, to be used for explicitly
          supporting LwCCM by disabling features

Wed Apr  7 06:58:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/QosProfile/*:
          Added test which tests whether deployment fails when an
          incorrect profile name is given.
